:bug: Fixes login on mobile

--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -77,6 +77,14 @@
 
                 background-color: $color-100;
 
+                @media screen and (max-width: 400px) {
+                    font-size: .9rem;
+                }
+
+                @media screen and (max-width: 300px) {
+                    font-size: .8rem;
+                }
+
                 &:focus {
                     border: $accent-lighter 2px solid;
                     outline: none;
